# janne

./: .gitignore  LICENSE.txt  README.md  conf.py  doc.sh  index.rst  pyproject.toml  requirements.dev.txt
janne/: __init__.py  _reader.py  janne._reader.rst  janne.interfaces.iadversorial.rst  janne.interfaces.idecoder.rst  janne.interfaces.imodel.rst  janne.interfaces.rst  janne.reader.rst  janne.rst  janne.trainer._trainer.rst  janne.trainer.rst  reader.py
janne/interfaces/: IDecoder.py  __init__.py  _iadversorial.py  _idecoder.py  _imodel.py  iadversorial.py  imodel.py
janne/tests/: ann_test.py  decoder_test.py  model_test.py  reader_test.py  test_tools.py  training_loop_test.py
janne/trainer/: __init__.py  _trainer.py
